# rust-embedding-service

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml
proto/: embedding.proto
src/: main.rs
